test/type_error/insufficient_dimension.rqcpp
qbits q[1]

procedure main():
    x[3][2] = [1]
    y = 1 + x[1][1][0]